Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127434

The labelsVisible property affects the titleVisible property behavior if labelsVisible is set to false and titleVisible is set to true.

XMLWordPrintable

    • c87a46337 (dev), 2a896e578 (6.8), efcda4d42 (6.7)

      The labelsVisible property affects the titleVisible property behavior if labelsVisible is set to false and titleVisible is set to true.

      This behavior limits the visibility control of the axis title and ties it to the visibility of the labels.

      To reproduce the issue, run the attached example project.

        1. untitled63.zip
          2 kB
          Mehdi Belila
        For Gerrit Dashboard: QTBUG-127434
        # Subject Branch Project Status CR V

            tokorpip Tomi Korpipää
            mahdi.belila Mehdi Belila
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes