Do not hide title if only labels should be hidden

Title's sizeHint didn't take the visibility of labels into
consideration when calculating the size hint. Instead, we ended
up with "..." for titles when labels were to be hidden and
titles left visible.

Fixes: QTBUG-127434
Change-Id: I123d4b0a41f09f1e130e43c03d4d89a1d3404b50
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
(cherry picked from commit c87a46337c8150272e65825f7899857b0cfb9042)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 2a896e578e447336f543d05829f4df211f276597)